[workspace]
resolver = "2"
members = ["crates/serde-tristate", "crates/serde-tristate-macros"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mathys R. <mat.stjr@gmail.com>"]
license = "MIT"
repository = "https://github.com/msjtr/serde-tristate"

[workspace.dependencies]
serde = "1"
