[workspace]
resolver = "2"
members = ["crates/serde-tristate", "crates/serde-tristate-macros"]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Mathys R. <mat.stjr@gmail.com>"]
license = "MIT"
repository = "https://github.com/mstjr/serde-tristate"

[workspace.dependencies]
serde = "1"
