[package]
name = "serde-tristate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Three-state Patch<T> for HTTP PATCH bodies with automatic serde integration"
readme = "../../README.md"

[features]
default = ["macro"]
macro = ["dep:serde-tristate-macros"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde-tristate-macros = { path = "../serde-tristate-macros", version = "0.1.0", optional = true }

[dev-dependencies]
serde_json = "1"
